Mon Mar  3 07:47:17 2014  Eric Wong  <e@80x24.org>

	* README.EXT: wrap GetDBM with do/while(0)
	* README.EXT.ja: ditto
	* ext/dbm/dbm.c: ditto, likewise for GetDBM2
	* ext/gdbm/gdbm.c: ditto
	* ext/sdbm/init.c: ditto
	  [ruby-core:61217]

Mon Mar  3 07:17:31 2014  Zachary Scott  <e@zzak.io>

	* NEWS: [DOC] Update doc regarding filesystem load when flushing IO

Mon Mar  3 04:37:50 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (rb_io_fsync): need to fsync even if on Windows.  fixed mistake
	  of r45254 and r45256.

Mon Mar  3 04:21:34 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/win32ole: get rid of warnings (unused variable).

Mon Mar  3 02:53:53 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (rb_io_flush_raw): [EXPERIMENTAL] remove force syncing for Win32
	  to speed up IO.  this may break some tests, and they'll be fixed
	  later.
	  [ruby-core:58570] [Bug #9153]

Mon Mar  3 00:17:43 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_backtrace.rb: get rid of warnings.  unused variable,
	  shadowing.

Sun Mar  2 11:15:10 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/find.rb (Find#find): add "ignore_error" keyword argument
	  defaulted to true.  [ruby-core:51025] [Feature #7596]

Sun Mar  2 11:13:30 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/readline/extconf.rb (rl_hook_func_t): define as Function for
	  very old readline versions.  [ruby-core:61209] [Bug #9578]

Sun Mar  2 10:47:58 2014  Eric Wong  <e@80x24.org>

	* load.c (ruby_init_ext): make idempotent to suppress warnings

Sat Mar  1 19:51:42 2014  Tanaka Akira  <akr@fsij.org>

	* lib/open3.rb (Open3.capture3): Ignore Errno::EPIPE for writing
	  stdin_data.
	  (Open3.capture2): Ditto.
	  (Open3.capture2e): Ditto.

Sat Mar  1 19:06:47 2014  Eric Wong  <e@80x24.org>

	* gc.c (ruby_gc_set_params): simplify condition

Sat Mar  1 16:18:40 2014  Tanaka Akira  <akr@fsij.org>

	* ext/readline/readline.c (Init_readline): Use rl_hook_func_t instead